bug 567835 - add parentheses to make the required logic to happen r=dholbert